  Clang with -frewrite-includes option is recommended (3.2+ or patched).
- support 'icecc <compilername>' properly
- try to avoid compiling on the local machine if it is busy
- do not use old compiler if it was changed while icecream daemon was running
- verify if remote hosts can actually be used for compilation (avoids
  problems with old kernel versions)

0.9.7 (1232780)
- bug fix for -MD and -MF
- bug fix for gcc 4.6 plugins

0.9.6 (1158638)
- fix installation issues
- add a value type of ticks in /proc - and make it long long
- fix kFreeBSD build
- fix run-failure with glibc 2.11
- allow tgz as extension
- support more local args (bnc#625621)

0.9.5 (1083362)
- fix: close the file descriptor (novell bug 525799)
- log PID even if no prefix is specified
- allow get_msg() to fetch data from the kernel even if timeout is 0.
- clean up event loop of gcc invocation
- Install an "icerun" symlink that will serialize commands through
  icecream's local daemon

0.9.4 (961598):
- fix compilation warnings
- don't leak file descriptor to create-env
- don't use the shell to call simple commands
- assert current_kids is > 0 before decrementing (it's unsigned)
- also check for EAGAIN (needed on OS X)
- add ICECC_LOGFILE to get trace() output into a file
- Fix compilation when using -Wformat -Werror=format-security flags
- make a special exception for - in rest args (bnc#495786)
- Fix way icecream changes permissions of /var/cache/icecream

0.9.3 (926474):
 - Fix FTBFS with GCC 4.4
 - Explicitly set group ownership and permissions on the base cache 
   dir and target dir in case root has a umask of e.g. 0077. 
   Otherwise nobody user won't be ableto untar.
 - make sure that a too strict umask doesn't ruin the game
   fixes https://bugzilla.novell.com/show_bug.cgi?id=446329
 - some create-env fixes for fedora

0.9.2 (879112):
 - On OS X, append the release number to Darwin (Darwin8 for Tiger, Darwin9 for Leopard) 
   as their icecream environments are not compatible