@@ -40,7 +40,8 @@ extern std::string remote_daemon;
 extern std::string get_absfilename( const std::string &_file );
 
 /* In arg.cpp.  */
-extern bool analyse_argv (const char * const *argv, CompileJob &job, bool icerun);
+extern bool analyse_argv (const char * const *argv, CompileJob &job, bool icerun,
+    std::list<std::string> *extrafiles);
 
 /* In cpp.cpp.  */
 extern pid_t call_cpp (CompileJob &job, int fdwrite, int fdread = -1);
