@@ -15,6 +15,7 @@ usage ()
 {
     echo "usage: $0 <gcc_path> <g++_path>"
     echo "usage: $0 [<gcc_path>|] [<g++_path>|] <clang_path> <compiler_wrapper>"
+    echo "usage: Use --addfile <file> to add extra files."
 }
 
 is_contained ()
@@ -103,10 +104,9 @@ if test -n "$added_gcc" || test -n "$added_gxx"; then
     fi
 fi
 
-added_clang=$1
-shift
-
-if test -n "$added_clang"; then
+if test -n "$1" -a "x$1" != "x--addfile"; then
+    added_clang=$1
+    shift
     clang=1
     if ! test -x "$added_clang" ; then
         echo "'$added_clang' is no executable."
@@ -124,6 +124,13 @@ if test -z "$gcc" && test -z "$clang"; then
     usage
     exit 1
 fi
+
+extrafiles=
+while test "x$1" = "x--addfile"; do
+    shift
+    extrafiles="$extrafiles $1"
+    shift
+done
 
 tempdir=`mktemp -d /tmp/iceccenvXXXXXX`
 
@@ -178,6 +185,10 @@ if test -n "$clang"; then
 fi
 
 add_file /usr/bin/as
+
+for extrafile in $extrafiles; do
+    add_file $extrafile
+done
 
 if test "$is_darwin" = 1; then
     # add dynamic linker
